// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeSSEStream basic cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream basic crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream basic lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream chunk split at crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream chunk split at end cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream chunk split at end crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream chunk split at end lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream chunk split at space cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream chunk split at space crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream chunk split at space lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream chunked cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream chunked crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream chunked lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream event IDs cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo
quux",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "baz",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "sameid",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "baz",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "replacedid",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "newid",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream event IDs crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo
quux",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "baz",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "sameid",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "baz",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "replacedid",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "newid",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream event IDs lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo
quux",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "baz",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "sameid",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "baz",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "replacedid",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "newid",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream event types cr 1`] = `
[
  MessageEvent {
    Symbol(type): "baz",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo
quux",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "noeventtype",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream event types crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "baz",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo
quux",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "noeventtype",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream event types lf 1`] = `
[
  MessageEvent {
    Symbol(type): "baz",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo
quux",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "noeventtype",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream field with no colon cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc


foo
",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream field with no colon crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc


foo
",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream field with no colon lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc


foo
",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream invalid stream cr 1`] = `[]`;

exports[`makeSSEStream invalid stream crlf 1`] = `[]`;

exports[`makeSSEStream invalid stream lf 1`] = `[]`;

exports[`makeSSEStream only one leading space stripped cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): " abc",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream only one leading space stripped crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): " abc",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream only one leading space stripped lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): " abc",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream only one trailing newline stripped cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): " abc

",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream only one trailing newline stripped crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): " abc

",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream only one trailing newline stripped lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): " abc

",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream very chunked cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream very chunked crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`makeSSEStream very chunked lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;
